# anoma

./: Cargo.toml
apps/: Cargo.toml
apps/src/lib/: cli.rs
apps/src/lib/cli/: context.rs
apps/src/lib/client/: gossip.rs  rpc.rs  signing.rs  tx.rs  utils.rs
apps/src/lib/config/: genesis.rs
apps/src/lib/node/: matchmaker.rs
apps/src/lib/wallet/: defaults.rs  keys.rs  mod.rs  store.rs
docs/src/specs/ledger/: rpc.md
encoding_spec/: Cargo.toml
encoding_spec/src/: main.rs
genesis/: e2e-tests-single-node.toml
matchmaker/mm_token_exch/src/: lib.rs
shared/: Cargo.toml
shared/src/ledger/: parameters.rs  rpc.rs  vp_env.rs
shared/src/ledger/pos/: mod.rs  storage.rs  vp.rs
shared/src/ledger/storage/: mod.rs
shared/src/proto/: types.rs
shared/src/types/: address.rs  intent.rs  mod.rs  rpc.rs  storage.rs  time.rs  token.rs
shared/src/types/key/: common.rs  ed25519.rs  ed25519c.rs  mod.rs  secp256k1.rs
shared/src/types/transaction/: mod.rs  (+1 more)
shared/src/vm/: host_env.rs
tests/src/e2e/: helpers.rs  ledger_tests.rs
tests/src/vm_host_env/: mod.rs  tx.rs  vp.rs
vm_env/src/: imports.rs  intent.rs  lib.rs  nft.rs  proof_of_stake.rs
vm_env/src/key/: ed25519.rs
vp_prelude/src/: lib.rs
wasm/: checksums.json
wasm/wasm_source/: Makefile
wasm/wasm_source/src/: lib.rs  vp_testnet_faucet.rs  vp_user.rs
wasm_for_tests/: tx_memory_limit.wasm  tx_mint_tokens.wasm  tx_no_op.wasm  tx_read_storage_key.wasm  vp_always_false.wasm  vp_always_true.wasm  vp_eval.wasm  vp_memory_limit.wasm  vp_read_storage_key.wasm
wasm_for_tests/wasm_source/src/: lib.rs
(+8 files in other folders)
