[package]
authors = ["Heliax AG <hello@heliax.dev>"]
description = "Anoma encoding spec generator"
edition = "2021"
license = "GPL-3.0"
name = "anoma_encoding_spec"
readme = "../README.md"
resolver = "2"
version = "0.4.0"

[dependencies]
anoma = {path = "../shared"}
borsh = "0.9.0"
itertools = "0.10.3"
lazy_static = "1.4.0"
madato = "0.5.3"
